// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coverage 1`] = `
ContactModel {
  "$collie": true,
  "cid": 13,
  "email": Array [],
  "isLocal": true,
  "isShared": false,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`coverage 2 1`] = `
ContactModel {
  "$collie": true,
  "cid": 13,
  "email": Array [],
  "isLocal": false,
  "isShared": false,
  "isSharedLocal": true,
  "mcid": 13,
  "monogram": "",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`returns contact for aceventura 1`] = `
ContactModel {
  "$collie": true,
  "birthdate": Object {
    "day": 1,
    "month": 10,
    "month1": 10,
  },
  "cid": 13,
  "email": Array [
    Object {
      "id": 1,
      "ref": "ref-e",
      "tags": Array [
        2,
      ],
      "value": "e",
    },
  ],
  "isLocal": true,
  "isShared": false,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "E",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`returns contact for collie (no birthdate) 1`] = `
ContactModel {
  "$collie": true,
  "cid": 13,
  "email": Array [],
  "isLocal": true,
  "isShared": false,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`returns contact for collie (no email tags) 1`] = `
ContactModel {
  "$collie": true,
  "cid": 13,
  "email": Array [
    Object {
      "id": 1,
      "ref": "ref-e",
      "tags": Array [],
      "value": "e",
    },
  ],
  "isLocal": true,
  "isShared": false,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "E",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`returns contact for collie (noname) 1`] = `
ContactModel {
  "$collie": true,
  "birthdate": Object {
    "timestamp": null,
    "year": 1999,
  },
  "cid": 13,
  "department": "Отдельный отдел",
  "email": Array [],
  "isLocal": false,
  "isShared": false,
  "isSharedLocal": true,
  "mcid": 13,
  "monogram": "",
  "name": Object {},
  "summary": "Котики",
  "tag": Array [],
  "tags": Array [],
  "title": "Руководитель разработки абука",
  "ya_directory": Object {
    "id": 1130000039137066,
    "type": "user",
  },
}
`;

exports[`returns contact for collie (shared contact) 1`] = `
ContactModel {
  "$collie": true,
  "cid": 13,
  "email": Array [],
  "isLocal": false,
  "isShared": true,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "",
  "name": Object {},
  "tag": Array [],
  "tags": Array [],
}
`;

exports[`returns contact for collie 1`] = `
ContactModel {
  "$collie": true,
  "birthdate": Object {
    "day": 1,
    "month": 10,
    "month1": 10,
    "timestamp": 1285891200000,
    "year": 2010,
  },
  "cid": 13,
  "email": Array [
    Object {
      "id": 1,
      "ref": "ref-e",
      "tags": Array [
        2,
      ],
      "value": "e",
    },
  ],
  "isLocal": true,
  "isShared": false,
  "isSharedLocal": false,
  "mcid": 13,
  "monogram": "N",
  "name": Object {
    "full": "n",
    "last": "n",
  },
  "phone": Array [
    Object {
      "value": "+0",
    },
  ],
  "tag": Array [
    1,
    2,
  ],
  "tags": Array [
    1,
    2,
  ],
}
`;
